Apply security fixes featuring `refasterrules.FileRulesRecipes`
Signed-off-by: Vincent Potucek <vpotucek@me.com>